fixed light and dark mode functionality

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,3 +1,12 @@
-body {
-    background-color: aquamarine;
+/* Dark Mode */
+.dark {
+    background-color:black;
+    height: 100vh;
+    color: white;
+}
+
+.light {
+    background-color:white;
+    color: black;
+    height: 100vh;
 }
